# Omnipaxos

./: README.md  docker-compose.yml  kube.yml  patch.json  patchconfig.json
kv_store/: Cargo.toml  Dockerfile
kv_store/src/: database.rs  kv.rs  main.rs  network.rs  server.rs  trigger.rs
network_actor/: Cargo.toml  Dockerfile
network_actor/src/: main.rs  network.rs
