[package]
name = "kv_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos = { git = "https://github.com/haraldng/omnipaxos",rev="c9d3ad56b745c4e589bf491cf43d25dc9572dc11", features = ["serde", "macros"] }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", rev="c9d3ad56b745c4e589bf491cf43d25dc9572dc11", features=["persistent_storage"]}
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
rocksdb = "0.21.0"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
futures = "0.3"
